--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,23 @@
     android:orientation="vertical"
     tools:context="com.example.android.justjava.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Toppings"
-        android:layout_marginBottom = "16dp"
-        android:textAllCaps="true"/>
+        android:hint="@string/name_placeholder"
+        android:layout_marginBottom="16dp"
+        android:textColor="#000000"
+        android:id="@+id/name_field"
+        android:inputType="textCapWords"/>
+
+    <TextView
+        android:text="@string/toppings_header"
+        style="@style/HeaderTextStyle"/>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom = "16dp">
+        android:layout_height="wrap_content">
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -32,17 +37,36 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Whipped Cream"
+            android:text="@string/whipped_cream"
+            android:textColor="#000000"
             android:textSize="16sp"/>
 
     </LinearLayout>
 
-    <TextView
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity"
-        android:layout_marginBottom = "16dp"
-        android:textAllCaps="true"/>
+        android:layout_height="wrap_content">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="24dp"
+            android:id="@+id/chocolate_check_box"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chocolate"
+            android:textColor="#000000"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+
+    <TextView
+        android:text="@string/quantity_header"
+        style="@style/HeaderTextStyle"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -76,26 +100,25 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order Summary"
-        android:textAllCaps="true"
-        android:layout_marginBottom = "16dp"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Order Summary"-->
+        <!--android:textAllCaps="true"-->
+        <!--android:layout_marginBottom = "16dp"/>-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/order_summary_text_view"
-        android:text="$10.00"
-        android:textColor="#000000"
-        android:textSize="16sp"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/order_summary_text_view"-->
+        <!--android:text="$10.00"-->
+        <!--android:textColor="#000000"-->
+        <!--android:textSize="16sp"/>-->
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "16dp"
-        android:text="Order"
+        android:text="@string/order_button"
         android:onClick="submitOrder"/>
 
 
